--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -1,7 +1,7 @@
 body {
 	background-color: rgb(27, 27, 27);
 	color: whitesmoke;
-	line-height: 2em;
+	line-height: 1.5;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -16,9 +16,8 @@ h1 {
 h2 {
 	padding-top: 0.1px;
 	margin-top: 0;
-	font-size: 18pt;
-	line-height: 1.2em;
-	background-color: red;
+	font-size: 16pt;
+	line-height: 1;
 }
 
 h3 {
